--- a/exam/report/appendix.tex
+++ b/exam/report/appendix.tex
@@ -1,6 +1,62 @@
 \pagebreak
 \section{Figures}
 
+% Figures for Diffusion
+\begin{figure}[H]
+  \centering
+      % Image 1
+      \includegraphics[width=0.8\textwidth]{./figures/base_digits.png} % Adjust width as needed
+      \par \textbf{base} \par
+      \vspace{0.5em} % Optional spacing
+      
+      % Image 2
+      \includegraphics[width=0.8\textwidth]{./figures/lds_digits.png}
+      \par \textbf{lds} \par
+      \vspace{0.5em}
+      
+      % Image 3
+      \includegraphics[width=0.8\textwidth]{./figures/importance_digits.png}
+      \par \textbf{importance} \par
+      \vspace{0.5em}
+      
+      % Image 4
+      \includegraphics[width=0.8\textwidth]{./figures/cond_digits.png}
+      \par \textbf{conditional} \par
+      \vspace{0.5em}
+      
+      % Image 5
+      \includegraphics[width=0.8\textwidth]{./figures/sde_digits.png}
+      \par \textbf{sde} \par
+      
+      \caption{Generated images from our models}
+  
+      \label{fig:ddpm:gensamples}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\linewidth]{./figures/loss.png}
+  \caption{Likelihoods}
+  \label{fig:ddpm:loss}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\linewidth]{./figures/FID.png}
+    \caption{FID-scores}
+    \label{fig:ddpm:fid}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\linewidth]{./figures/Inception.png}
+    \caption{Inception-scores}
+    \label{fig:ddpm:inception}
+\end{figure}
+
+
+
+
 % Figures for Gaussian process
 \begin{figure}[H]
   \centering
