--- a/exam/report/diffusion.tex
+++ b/exam/report/diffusion.tex
@@ -132,3 +132,4 @@ For our qualitative Comparison we consider, loss (negative log-likelihood), FID-
     Looking at the Results in~\cref{fig:ddpm:fid}
     We notice that the FID score curves are approximately just the inverse of the Inception-score curves. As before we notice that the SDE method is an outlier, the fid score even seems to rise over epochs, suggesting that the SDE method is overfitting.
     As for the other methods the results are similar to the conditional method performs worst, and that the LDS method performs the best, suggesting that the conditional method is more prone to overfitting.
+\end{itemize}
