--- a/exam/report/diffusion.tex
+++ b/exam/report/diffusion.tex
@@ -1,5 +1,6 @@
 \subsection{A.1: Variations}
 \subsubsection{Variation 0: Baseline}
+Our Baseline method is the model provided from "mnist\_ddpm\_solution.ipynb"
 
 \subsubsection{Variation 1: Low-discrepency sampler}
 Here we implement a discretised version of the low-discrepency sampler (LDS) from \cite{kingma2023variationaldiffusionmodels}.
