--- a/exam/report/main.tex
+++ b/exam/report/main.tex
@@ -16,7 +16,7 @@
 \date{January 17th, 2025}
 \maketitle
 
-All code i available at: \url{https://github.com/joshniemela/ProbabilisticML/tree/main/exam/src}
+All code is available at: \url{https://github.com/joshniemela/ProbabilisticML/tree/main/exam/src}
 
 \section{Diffusion-based generative models}
 \input{diffusion.tex}
